--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,12 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+  color: #19c403;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #117964;
+  color:  #0f6903;
   text-decoration: underline;
 }
 
