--- a/css/styles.css
+++ b/css/styles.css
@@ -6093,7 +6093,7 @@ button.bg-secondary:focus {
 }
 
 .bg-success {
-  background-color: #28a745 !important;
+  background-color: #F7E600 !important;
 }
 
 a.bg-success:hover, a.bg-success:focus,
