--- a/css/styles.css
+++ b/css/styles.css
@@ -3925,7 +3925,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1abc9c;
+  background-color: #3A1D1D;
 }
 
 .nav-fill > .nav-link,
