--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,12 @@ sup {
 }
 
 a {
-  color: #19c403;
+  color: #3A1D1D;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color:  #0f6903;
+  color:  #3A1D1D;
   text-decoration: underline;
 }
 
@@ -10067,13 +10067,13 @@ h3 {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #1abc9c;
+  color: #3A1D1D;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #1abc9c;
+  color: #3A1D1D;
 }
 #mainNav .navbar-toggler {
   font-size: 80%;
