--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,6 @@ a:hover {
   color:  #3A1D1D;
   text-decoration: underline;
 }
-
 a:not([href]):not([class]) {
   color: inherit;
   text-decoration: none;
@@ -10095,11 +10094,11 @@ h3 {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+    background: #3A1D1D;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #1abc9c;
+    background: #3A1D1D;
   }
 
   #mainNav.navbar-shrink {
